video/jellyfin/generic/jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    # we need Recreate here because jellyfin uses sqlite database
    # which could be corrupted when 2 servers are running at the same time
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
      - name: jellyfin
        image: docker.io/jellyfin/jellyfin:10.8.11
        ports:
        - name: http
          containerPort: 8096
        # securityContext:
        #   readOnlyRootFilesystem: true
        resources:
          requests:
            memory: 850Mi
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /config/data
          name: db
        - mountPath: /media
          name: media
        - mountPath: /cache
          name: cache
        - mountPath: /config/transcodes
          name: transcodes
      volumes:
      - name: db
        persistentVolumeClaim:
          claimName: db
      - name: config
        persistentVolumeClaim:
          claimName: config
      - name: cache
        emptyDir: {}
      - name: transcodes
        emptyDir:
          medium: Memory
          sizeLimit: 3Gi
      - name: media
        persistentVolumeClaim:
          claimName: torrent
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
  - name: http
    port: 80
    targetPort: http
