video/jellyfin/generic/allow-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress
spec:
  podSelector:
    matchLabels:
      app: jellyfin
  ingress:
  - ports:
    - port: http
    from:
    - namespaceSelector:
        matchLabels:
          ingress: ingress
